feat: add rotas login e user ao swagger
